# country-api

./: Cargo.toml
migrations/2024-04-18-183323_create_pais/: down.sql  up.sql
migrations/2024-04-18-183734_create_estado/: down.sql  up.sql
migrations/2024-04-18-184000_create_cidade/: down.sql  up.sql
src/: common.rs  main.rs  models.rs  schema.rs
src/controller/: country_controller.rs  mod.rs
src/core/: environment.rs
src/repository/: connection.rs  country_repository.rs  mod.rs
src/service/: country_service.rs  mod.rs
