[package]
name = "cities-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
serde_json = "1"
env_logger = "0.11.3"
